--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>ProductManagement</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/2674/2674505.png">
 </head>
 <body>
   <app-root></app-root>
